--- a/cria-projeto/package.json
+++ b/cria-projeto/package.json
@@ -11,5 +11,8 @@
     "node"
   ],
   "author": "Cristina_Pineda",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
